# cusco

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  TODO.md  meson.build
.github/workflows/: build-and-release.yml
data/: io.github.stonega.Cusco.appdata.xml.in  io.github.stonega.Cusco.desktop.in  io.github.stonega.Cusco.gresource.xml  io.github.stonega.Cusco.gschema.xml  io.github.stonega.Cusco.search-provider.ini  meson.build
data/gnome-shell/extensions/cusco-computer-use@stonega/: emergencyStop.js  extension.js  indicatorStatus.js  keyNames.js  metadata.json  stylesheet.css  windowFocus.js
data/resources/: style.css
docs/design/: architecture.md
docs/implementation/: agent-development.md  artifacts.md  chat-performance.md  computer-use.md  hooks.md  image-editor.md  setup.md
docs/user/: artifacts.md  computer-use.md  getting-started.md  hooks.md  image-editor.md  provider-models.md
examples/: README.md
examples/skills/cusco-mcp-setup/: SKILL.md
postmortem/: README.md
scripts/: check.sh  update-computer-use-extension.sh
src/: appInfo.js  appInfo.js.in  application.js  bundledIcons.js  cusco.in  main.js  meson.build  searchProvider.js  window.js
src/artifacts/: manager.js  model.js
src/artifacts/renderers/: native.js  registry.js  web.js
src/artifacts/views/: artifactCard.js  workspace.js
src/artifacts/web/: runtime.js
src/chat/: agentMode.js  artifacts.js  attachments.js  codeThemes.js  compaction.js  conversation.js  markdown.js  messageView.js  usage.js
src/composer/: references.js
src/computerUse/: accessibility.js  imageViews.js  protocol.js  service.js  tools.js
src/cron/: manager.js
src/hooks/: auditStore.js  config.js  manager.js  protocol.js  runner.js  trustStore.js
src/imageEditor/: document.js  renderer.js  window.js
src/mcp/: auth.js  client.js  config.js  manager.js
src/memory/: memory.js
src/providers/: config.js  icons.js  imageGeneration.js  mockProvider.js  outputLimits.js  provider.js  remoteProvider.js  thinking.js  usage.js
src/secrets/: apiKeyStore.js
src/settings/: appInfoSettings.js  appSettings.js  archivedChats.js  computerUseSettings.js  hooksSettings.js  mcpSettings.js  memorySettings.js  providerSettings.js  workspaceSettings.js
src/skills/: skills.js
src/storage/: artifactStore.js  conversationStore.js  memoryStore.js  workspaceStore.js
src/tools/: artifacts.js  askUser.js  display.js  permissions.js  tools.js
src/workspace/: exports.js  promptVariables.js  workspace.js
tests/: accessibility-smoke.js  agent-mode-smoke.js  app-settings-smoke.js  archived-chats-smoke.js  artifact-manager-smoke.js  artifact-tools-smoke.js  artifact-web-security-smoke.js  artifact-workspace-smoke.js  artifacts-smoke.js  ask-user-smoke.js  attachments-smoke.js  chat-management-smoke.js  compaction-smoke.js  composer-references-smoke.js  computer-use-benchmark-smoke.js  computer-use-image-views-smoke.js  computer-use-smoke.js  conversation-store-smoke.js  cron-smoke.js  hooks-settings-smoke.js  hooks-smoke.js  image-editor-smoke.js  image-editor-window-smoke.js  image-generation-smoke.js  import-smoke.js  markdown-smoke.js  mcp-smoke.js  memory-smoke.js  message-view-smoke.js  mock-provider-smoke.js  prompt-variables-smoke.js  provider-config-smoke.js  provider-settings-smoke.js  remote-provider-adapters-smoke.js  remote-provider-http-smoke.js  search-provider-smoke.js  skills-smoke.js  tools-smoke.js  usage-smoke.js  workspace-smoke.js
tests/fixtures/: computer-use-focus.html  fake-mcp-server.js
